--- a/CoursFlairy/Themes/Light.xaml
+++ b/CoursFlairy/Themes/Light.xaml
@@ -1,5 +1,49 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <LinearGradientBrush x:Key="PanelGradient" StartPoint="0,0" EndPoint="1,-1" >
+        <LinearGradientBrush.RelativeTransform>
+            <TransformGroup>
+                <ScaleTransform CenterY="0.5" CenterX="0.5"/>
+                <SkewTransform CenterX="0.5" CenterY="0.5"/>
+                <RotateTransform Angle="14.036" CenterX="0.5" CenterY="0.5"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </LinearGradientBrush.RelativeTransform>
+        <GradientStop Color="#FF0F39CE" Offset="-0.2"/>
+        <GradientStop Color="#FF116FF5" Offset="1"/>
+    </LinearGradientBrush>
+    <RadialGradientBrush x:Key="SearchPageGradient" GradientOrigin="0.5,0.7" Center="0.5,0.8" RadiusX="0.7" RadiusY="0.4" SpreadMethod="Pad" Opacity="1">
+        <RadialGradientBrush.RelativeTransform>
+            <TransformGroup>
+                <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleY="3"/>
+                <SkewTransform CenterX="0.5" CenterY="0.5"/>
+                <RotateTransform CenterX="0.5" CenterY="0.5"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </RadialGradientBrush.RelativeTransform>
+        <GradientStop Color="#FF2F66B5" Offset="0.583"/>
+        <GradientStop Color="#FF78A4F3" Offset="0.035"/>
+        <GradientStop Color="#FF3A27B2" Offset="0.946"/>
+        <GradientStop Color="#FF35249E" Offset="1"/>
+    </RadialGradientBrush>
+
+    <SolidColorBrush x:Key="Black" Color="Black"/>
+    <SolidColorBrush x:Key="White" Color="White"/>
+    <SolidColorBrush x:Key="MainColor100" Color="Navy"/>
+    <SolidColorBrush x:Key="MainColor50" Color="Blue"/>
+    <SolidColorBrush x:Key="MainColor30" Color="DeepSkyBlue"/>
+    <SolidColorBrush x:Key="MainColor20" Color="LightBlue"/>
+    <SolidColorBrush x:Key="MainColor10" Color="LightGray"/>
+    <SolidColorBrush x:Key="HighlightingSelectionMainWindow" Color="#25ADD8E6"/>
+    <SolidColorBrush x:Key="HintColor" Color="LightSlateGray"/>
+    <SolidColorBrush x:Key="DatePickerGray" Color="Gray"/>
+    <SolidColorBrush x:Key="DatePickerAdditionalBackground" Color="Lavender"/>
+    <SolidColorBrush x:Key="CloudColor" Color="#cce1f4"/>
+
+    <Color x:Key="Shadow">Black</Color>
+
+
     <!--
     
     <Style/> Style="{DunamicResource Name}"
