--- a/CoursFlairy/View/MainWindow.xaml
+++ b/CoursFlairy/View/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:UI="clr-namespace:CoursFlairy.View.UI"
+        xmlns:converter="clr-namespace:CoursFlairy.ViewModel.Converter.MainWindow"
         mc:Ignorable="d"
         ResizeMode="NoResize" Width="1536" Height="824" Left="0" Top="0"
         Title="MainWindow"  
@@ -23,6 +24,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <converter:OpacityToVisiblityConverter x:Key="OpacityToVisiblityConverter"/>
     </Window.Resources>
 
     <Grid>
@@ -64,7 +66,7 @@
             </Grid>
 
             <!--Аккаунт-->
-            <Grid Grid.Column="2" Style="{DynamicResource Highlight}">
+            <Grid x:Name="AccountGrid" Grid.Column="2" Style="{DynamicResource Highlight}" MouseEnter="AccountShow" MouseLeave="AccountHide">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseDown">
                         <i:InvokeCommandAction Command="{Binding Account_MouseDown}" />
@@ -81,7 +83,7 @@
             </Grid>
 
             <!--Вийти-->
-            <Grid Grid.Column="3">
+            <Grid x:Name="CloseGrid" Grid.Column="3">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2.5*"/>
                     <RowDefinition Height="3*"/>
@@ -111,6 +113,15 @@
 
         <!--Нижня Частина-->
         <Frame x:Name="PageManager" Grid.Row="1" NavigationUIVisibility="Hidden" Source="SearchPage.xaml"/>
-        <UI:ShowMessage Visibility="Collapsed" Foreground="{DynamicResource MainColor100}" BorderBackground="{DynamicResource White}" x:Name="GlobalMessage" Grid.ColumnSpan="10" Grid.RowSpan="10"/>
+        <Grid Visibility="{Binding ElementName=AccountUI, Path=Opacity, Converter={StaticResource OpacityToVisiblityConverter}}" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+
+            <UI:AccountControl x:Name="AccountUI" Opacity="0" Margin="0, 5, 5 ,0" Grid.Column="1" MouseEnter="AccountShow" MouseLeave="AccountHide" RegistonUser_MouseDown="AccountUI_RegistonUser_MouseDown" />
+        </Grid>
+
+        <UI:ShowMessage x:Name="GlobalMessage" Visibility="Collapsed" Foreground="{DynamicResource MainColor100}" BorderBackground="{DynamicResource White}" Grid.ColumnSpan="10" Grid.RowSpan="10"/>
     </Grid>
 </Window>
